# EthicalComputing

./: .gitignore  README.md  main.py  pyproject.toml
guides/: __init__.py  encrypted_communication_guide.py  ethical_guide.py  operating_system_guide.py  password_guide.py  storage_backup_guide.py
utils/: file_size_convert.py
