[tool.poetry]
name = "review_project"
version = "0.1.0"
description = ""
authors = ["Musa Khan <57375561+MusaMoses@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.1"
regex = "^2022.10.31"
requests = "^2.28.2"
black = "^23.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
